# linkchain-web

./: .gitignore  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: backend-cd.yaml  ci.yml  frontend-cd.yaml  random_reviewer.yml
app/backend/: .env.local  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  ruff.toml
app/backend/app/: main.py
app/backend/app/api/: Test.java  auth.py  group.py  join.py  link.py  route.py  session_utils.py  tag.py  user.py
app/backend/app/core/: auth.py  config.py  deps.py
app/backend/app/db/: session.py
app/backend/app/models/: __init__.py  link.py  link_group.py  link_group_link_map.py  link_history.py  link_tag_map.py  link_user_map.py  tag.py  user.py
app/backend/app/repositories/: link.py  link_group.py  link_history.py  link_user_map.py  pagination_utils.py  tag.py  user.py
app/backend/app/schemas/: auth.py  common.py  link.py  link_group.py  tag.py  user.py
app/backend/app/services/: link.py  link_group.py  tag.py  user.py
app/backend/app/tests/feature-join/: conftest.py  join_test_result.txt  test_join_api.py  test_user_repository.py  test_user_service.py
app/backend/app/utils/: embedding.py  hash.py  vector.py
app/backend/tests/: conftest.py
app/backend/tests/auth/: test_auth_api.py  test_auth_middleware.py  test_user_auth_service.py
app/backend/tests/link/: test_link_api.py  test_link_repository.py  test_link_service.py
app/backend/tests/user/: test_join_api.py  test_user_repository.py  test_user_service.py
app/chrome/: README.md  manifest.json  popup.html  (+1 more)
(+96 files in other folders)
