[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.124.4",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pymysql>=1.1.2",
    "sqlalchemy>=2.0.45",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.9",
]
